practice-k8s/practice-test/birds-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: newbird
  name: newbird
  namespace: birds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newbird
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: newbird
        type: allbirds
    spec:
      containers:
      - image: nginx:1.17
        name: nginx
        resources: {}
status: {}
