practice-k8s/practice-test/inpod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: inpod
  name: inpod
  namespace: indiana
spec:
  containers:
  - image: nginx:latest
    name: inpod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
