practice-k8s/practice-test/sidepod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sidepod
  name: sidepod
spec:
  containers:
  - image: nginx:latest
    name: sidepod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
