practice-k8s/practice-test/storepod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: storepod
  name: storepod
spec:
  containers:
  - image: nginx:latest
    name: storepod
    resources: {}
    volumeMounts:
      - name: store-volume 
        mountPath: "/usr/share/nginx/html"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    - name: store-volume
      persistentVolumeClaim:
        claimName: store-pv-claim
status: {}
