practice-k8s/practice-test/allbirds.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    type: allbirds
  name: allbirds
  namespace: birds
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 32323
  selector:
    type: allbirds
  type: NodePort
status:
  loadBalancer: {}
